[gd_scene load_steps=6 format=4]

[ext_resource type="Script" path="res://UI/score_progress_bar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dvnttmpn8jcg5" path="res://Art/Score Bar Under.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cfvjqaqbdoo5x" path="res://Art/Score Bar Progress.png" id="3"]
[ext_resource type="Texture2D" uid="uid://byt5r63fmooe3" path="res://Art/Score Bar White.png" id="4"]
[ext_resource type="Texture2D" uid="uid://nsxmi7hc1qrr" path="res://Art/Score Icon.png" id="5"]

[node name="ScoreProgressBar" type="Control"]
custom_minimum_size = Vector2(492, 108)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="ProgressTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="HideGrayBarTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Border" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 108.0
texture_under = ExtResource("2")

[node name="Gray Bar" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.5215690135955811)
layout_mode = 0
offset_right = 492.0
offset_bottom = 108.0
value = 90.0
texture_progress = ExtResource("3")

[node name="White Bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 108.0
value = 80.0
texture_progress = ExtResource("4")

[node name="Yellow Bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 108.0
value = 50.0
texture_progress = ExtResource("3")

[node name="SingleDigits" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="Icon" type="TextureRect" parent="SingleDigits"]
layout_mode = 0
offset_left = 126.0
offset_top = 30.0
offset_right = 204.0
offset_bottom = 108.0
texture = ExtResource("5")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="SingleDigits"]
custom_minimum_size = Vector2(144, 72)
layout_mode = 0
offset_left = 216.0
offset_top = 30.0
offset_right = 360.0
offset_bottom = 102.0
pivot_offset = Vector2(72, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="SingleDigits/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(24, 12)
render_target_update_mode = 4

[node name="Label" type="RichTextLabel" parent="SingleDigits/LabelContainer/SubViewport"]
clip_contents = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "3/5"
scroll_active = false

[node name="DoubleDigits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="Icon" type="TextureRect" parent="DoubleDigits"]
layout_mode = 0
offset_left = 84.0
offset_top = 30.0
offset_right = 162.0
offset_bottom = 108.0
texture = ExtResource("5")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="DoubleDigits"]
custom_minimum_size = Vector2(144, 72)
layout_mode = 0
offset_left = 174.0
offset_top = 30.0
offset_right = 414.0
offset_bottom = 102.0
pivot_offset = Vector2(120, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="DoubleDigits/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(40, 12)
render_target_update_mode = 0

[node name="Label" type="RichTextLabel" parent="DoubleDigits/LabelContainer/SubViewport"]
clip_contents = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "00/00"
scroll_active = false

[node name="TripleDigits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="Icon" type="TextureRect" parent="TripleDigits"]
layout_mode = 0
offset_left = 36.0
offset_top = 30.0
offset_right = 114.0
offset_bottom = 108.0
texture = ExtResource("5")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="TripleDigits"]
custom_minimum_size = Vector2(144, 72)
layout_mode = 0
offset_left = 126.0
offset_top = 30.0
offset_right = 462.0
offset_bottom = 102.0
pivot_offset = Vector2(168, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="TripleDigits/LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(56, 12)
render_target_update_mode = 0

[node name="Label" type="RichTextLabel" parent="TripleDigits/LabelContainer/SubViewport"]
clip_contents = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "000/000q"
scroll_active = false

[node name="PopupContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 114.0
offset_right = 360.0
offset_bottom = 186.0
pivot_offset = Vector2(126, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="PopupContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(38, 12)
size_2d_override = Vector2i(20, 12)
render_target_update_mode = 4

[node name="Label" type="Label" parent="PopupContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8980389833450317, 0.749019980430603, 0.274509996175766, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "+0!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Popup Hang Time" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="ProgressTimer" to="." method="_on_progress_timer_timeout"]
[connection signal="timeout" from="HideGrayBarTimer" to="." method="_on_hide_gray_bar_timer_timeout"]
[connection signal="timeout" from="Popup Hang Time" to="." method="_on_popup_hang_time_timeout"]
